fix overflow

--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -1,6 +1,7 @@
 .skills {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    // flex-direction: column;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
     border: 1px solid var(--gray-800);
     padding: 1.5rem;
@@ -15,7 +16,6 @@
             color: var(--gray-300);
             font-size: var(--text-lg);
             margin: 0;
-            text-align: justify;
         }
     }
 }
@@ -30,7 +30,6 @@
             flex: 1;
         }
         .stack {
-
             h2 {
                 font-size: var(--text-2xl);
             }
